--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ h1, h2, p {
   </div>
 
   <div class="sidebar">
-    <img src="profile_photo.jpg" alt="Profile Photo">
+    <img src="https://github.com/abdrishad/Personalweb/blob/PROD/profile_photo.jpg" alt="Profile Photo">
     <h1>Abdullah Rishad</h1>
     <p>Production Engineer</p>
     <p>Kasaragod, Kerala, India</p>
