--- a/index.html
+++ b/index.html
@@ -264,16 +264,17 @@ h1, h2, p {
     <section id="experience">
       <h2>Experience</h2>
       <ul>
-        <li><strong>Assistant Executive – Retail Operations</strong><br>Cloud Shoes LLP, Jul 2024 – Apr 2025</li>
-     <li><strong>Trainee Manager - 	Operations </strong><br>	Salespartners India,May 2025</li>
+	       <li><strong>Trainee Manager - 	Operations </strong><br>		Salespartners India,May 2025</li>
+        <li><strong>Assistant Executive – Retail Operations</strong><br>		Cloud Shoes LLP, Jul 2024 – Apr 2025</li>
+    
 	  </ul>
     </section>
 
     <section id="education">
       <h2>Education</h2>
       <ul>
-        <li><strong>B.Tech in Production Engineering</strong><br>Govt. Engineering College Thrissur – CGPA: 8.16</li>
-        <li><strong>HSS in PCM</strong><br>Chemnad Jama-ath HSS, Kasaragod – 90.58%</li>
+        <li><strong>B.Tech in Production Engineering</strong><br>	Govt. Engineering College Thrissur – CGPA: 8.16</li>
+        <li><strong>HSS in PCM</strong><br>		Chemnad Jama-ath HSS, Kasaragod – 90.58%</li>
       </ul>
     </section>
 
@@ -298,7 +299,9 @@ h1, h2, p {
         <div>3D Design</div>
         <div>Time Study</div>
         <div>Communication</div>
-        <div>Empathy</div>
+        <div>Digital manufacturing</div>
+	<div>Team Leadership</div>
+        <div>Quick-Learner</div>
       </div>
     </section>
   </div>
