--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ h1, h2, p {
   </div>
 
   <div class="sidebar">
-    <img src="https://github.com/abdrishad/Personalweb/blob/PROD/profile_photo.jpg" alt="Profile Photo">
+    <img src="https://photos.app.goo.gl/nGECUEhom5B3cPRE8" alt="Profile Photo">
     <h1>Abdullah Rishad</h1>
     <p>Production Engineer</p>
     <p>Kasaragod, Kerala, India</p>
