--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ h1, h2, p {
   </div>
 
   <div class="sidebar">
-    <img src="https://photos.app.goo.gl/nGECUEhom5B3cPRE8" alt="Profile Photo">
+    <img src="https://github.com/abdrishad/Personalweb/blob/c94633ba403795591b0ad89ecfbcb0eb200ccf3d/20241224_192349.jpg" alt="Profile Photo">
     <h1>Abdullah Rishad</h1>
     <p>Production Engineer</p>
     <p>Kasaragod, Kerala, India</p>
