--- a/index.html
+++ b/index.html
@@ -278,6 +278,14 @@ h1, h2, p {
   <div class="content">
     <section id="about">
       <h2>About Me</h2>
+	    <p>Creative and analytical Production Engineering graduate with a strong foundation in product design,
+prototyping, and mechanical systems. Skilled in using CAD software such as AutoCAD and Fusion 360 to
+develop and refine engineering concepts. Experienced in coordinating with cross-functional teams to
+deliver functional, user-focused designs under tight timelines. Adept at problem-solving through
+competitive analysis and technical validation. Passionate about product development and continuous
+learning, with a growing knowledge of materials, manufacturing processes, and project management
+principles.
+</p>
       <p>An enthusiastic engineer ready to take up any tasks and challenges that are assigned upon. Detail-oriented and proactive, skilled in inventory control, forecasting, and warehouse operations. Strong team player with experience in retail operations and warehouse management.</p>
     </section>
 
